# ledger-reconcile

./: .gitignore  CLAUDE.md  CODE_REVIEW.md  README.md  file_editor.html  mise.toml  pyproject.toml  sexp_parser.html  snapshot_report.html  target_balance_parser.html
docs/: sexp_test_fixtures.html
ledger_reconcile/: IDEAS.md  __init__.py  account_selector.py  file_editor.py  file_watcher.py  ledger_interface.py  main.py  reconcile_interface.py  sexp_parser.py  target_balance_parser.py
ledger_reconcile/css/: confirmation_screen.tcss  reconcile_app.css  target_balance_screen.tcss
scripts/: generate_all_previews.py  generate_sexp_test_preview.py  index_template.html.j2
tests/: __init__.py  base_template.html.j2  conftest.py  fixture_utils.py  generate_all_previews.py  index_template.html.j2  test_app.py  test_cases.html  test_file_editor.py  test_fixture_template.html  test_ledger_interface.py  test_reconcile_interface.py  test_sexp_parser.py
tests/account_selector/: __init__.py  template.html.j2  test_cases.html
tests/account_switching/: __init__.py  template.html.j2
tests/file_editor/: __init__.py  template.html.j2  test_cases.html
tests/ledger_interface/: __init__.py  template.html.j2  test_cases.html
tests/preview/: account_selector.html  account_switching.html  file_editor.html  index.html  ledger_interface.html  ui_flows.html
tests/sexp_parser/: __init__.py  template.html.j2  test_cases.html
tests/target_balance_parser/: __init__.py  template.html.j2  test_cases.html
tests/ui_flows/: __init__.py  snapshot_report_template.html.j2  test_cases.html  (+1 more)
(+72 files in other folders)
