[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ledger-reconcile"
version = "0.1.0"
description = "Terminal-based ledger reconciliation tool"
authors = [
    {name = "David Glasser"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "textual>=0.45.0",
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.20.0",
    "watchdog>=3.0.0",
]

[project.scripts]
ledger-reconcile = "ledger_reconcile.main:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-textual-snapshot>=0.4.0",
    "pyright>=1.1.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "YTT", "S", "BLE", "B", "A", "C4", "T20", "SIM", "ARG", "PTH", "PLE", "PLR", "PLW", "TRY", "RUF"]
ignore = ["E501", "S101", "PLR0913", "PLR2004"]

[tool.ruff.lint.per-file-ignores]
# Allow subprocess calls for trusted external programs in specific modules
"ledger_reconcile/account_selector.py" = ["S603", "S607"]  # fzf
"ledger_reconcile/ledger_interface.py" = ["S603", "S607"]  # ledger CLI
"ledger_reconcile/reconcile_interface.py" = ["S603", "S607"]  # code (VSCode)

[tool.pyright]
include = ["ledger_reconcile", "tests"]
exclude = ["**/__pycache__"]
typeCheckingMode = "basic"